--- a/.env.example
+++ b/.env.example
@@ -43,10 +43,10 @@ AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
-PUSHER_APP_ID=1587900
-PUSHER_APP_KEY=08583ec192b21489bdb9
-PUSHER_APP_SECRET=b454d1eaeb1e22bb61ee
-PUSHER_APP_CLUSTER=ap1
+PUSHER_APP_ID=
+PUSHER_APP_KEY=
+PUSHER_APP_SECRET=
+PUSHER_APP_CLUSTER=
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
